# spatio-temp-parroting

./: .gitignore  README.md  entry-point.sh  env.yml  main.py  pyproject.toml  requirements.txt
data/METR-LA/: adj_METR-LA.npy  adj_mx.pkl
src/: run.py
src/config/: config.json
src/data_loader/: graph_support_loader.py  local_data_loader.py  spatio_temporal_dataset.py
src/models/: gnn.py  t_and_s.py  temporal_attn.py
src/models/layers/: attn_layers.py  complex_layers.py  graph_fcts.py  positional_encoding.py
src/runtime/: check_jacobian.py  test.py  train.py
src/util/: check_vram_usage.py  exceptions.py  git_utils.py  hpc_utils.py  mlflow_utils.py  plotting.py  train_utils.py
