[project]
name = "spatio-temp-parroting"
version = "0.1.0"
description = "Reproducible research environment"
readme = "README.md"
requires-python = "==3.10.*"

dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.2",
    "scipy==1.14.0",
    "scikit-learn==1.3.0",
    "tables==3.9.2",
    "h5py==3.11.0",
    "einops==0.8.0",
    "torch==2.4.0",
    "torchvision==0.19.0",
    "torchaudio==2.4.0",
    "torch-sparse==0.6.18+pt24cu124",
    "torch-scatter==2.1.2+pt24cu124",
    "pyg-lib==0.4.0+pt24cu124",
    "torch-geometric==2.5.3",
]

[[tool.uv.index]]
name = "pytorch_cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch_cu124" }
torchvision = { index = "pytorch_cu124" }
torchaudio = { index = "pytorch_cu124" }

[tool.uv]
find-links = ["https://data.pyg.org/whl/torch-2.4.0+cu124.html"]
